--- a/html/first.html
+++ b/html/first.html
@@ -1,8 +1,51 @@
 <html>
     <head>
+        <link href="images/facebook.png" rel="icon"/>
         <title>KIMO</title>
     </head>
     <body>
-        <h1>Web Development App</h1>
+        <header>
+            <center>
+                <h1> Web Development App </h1>
+                <a href="second.html"> Second  </a>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="images/facebook.png" alt="fb" width="50px"/>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+            </center>
+        </header>
+        <hr/>
+        <h2>Web Development App</h2>
+        <h3>Web Development App</h3>
+        <h4>Web Development App</h4>
+        <h5>Web Development App</h5>
+        <h6>Web Development App</h6>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        </p>
+        <img src="london.jpeg" alt="london tower"/>
+        <img src="images/amsterdam.jpeg" alt="amsterdam"/>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        </p>
+        <span>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        </span> <br/><br/>
+        <span>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        </span>
+
+        <p style="background:skyblue">This is text 1</p>
+        <p style="background:yellow">This is text 2</p>
+        <span style="background:teal">This is text 3</span>
+        <span style="background:lightcoral">This is text 4</span>
+       
+        <footer>
+            <hr/>
+            <center>
+                <h3> &copy;  Developer Funnel  &backepsilon; &hearts; &SuchThat; &ohbar;  </h3>
+            </center>
+        </footer>
+
     </body>
 </html>
